<resources>
    <string name="app_name">BME Lost &amp; Found</string>
    <string name="title_activity_posts">PostsActivity</string>
    <string name="title_activity_post_detail">PostDetailActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="hint_enter_name">Enter Full Name</string>
    <string name="hint_enter_school">Enter School Name</string>
    <string name="hint_enter_id">Enter School ID</string>
    <string name="hint_enter_phone_num">Enter Phone Number</string>
    <string name="hint_description">Add Description</string>
    <string name="hint_title">Add Title</string>
    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>
    <string name="title_activity_post_tabs">PostTabsActivity</string>

    <string name="hintEmail">E-mail</string>
    <string name="hintPassword">Jelszó</string>
    <string name="btnTextLogin">Bejelentkezés</string>
    <string name="btnTextRegister">Regisztráció</string>
    <string name="hintUsername">Felhasználónév</string>
    <string name="hintPhone">Telefon</string>
    <string name="add_prof_pic">"Profilkép hozzáadása"</string>
    <string name="add_object_pic">"Kép hozzáadása"</string>
    <string name="open_gallery">"Kiválasztás galériából"</string>
    <string name="open_camera">"Kamera megnyitása"</string>
    <string name="lost_title">"Elveszett"</string>
    <string name="found_title">"Talált"</string>
    <string name="btn_apply_find">"Megtaláltam"</string>
    <string name="btn_apply_loseit">"Én vesztettem el"</string>
    <string name="btn_apply_found">"Megtalálva"</string>
    <string name="btn_apply_gotback">"Jelentkeztek érte"</string>
    <string name="button_send">Beküldés</string>
    <string name="text_building">Épület</string>
    <string name="hint_body">Leírás hozzáfűzése…</string>
    <string name="hint_create_title">Cím</string>
    <string name="title_activity_create_post">ActivityCreatePost</string>
    <string name="permission_denied_call">Hívás engedély elutasítva</string>
    <string name="call_permission_title">Hívás engedély</string>
    <string name="call_permission_explanation">Az alkalmazásnak engedélyre van szüksége, hogy közvetlen hívásokat indíthasson.</string>
    <string name="permission_allow">Tovább</string>
    <string name="permission_deny">Mégse</string>
    <string name="send_mail_intent">E-mail küldése</string>
    <string name="send_sms_intent">SMS küldése</string>
    <string name="settings_more">Több</string>
    <string name="settings_profile">Profil szerkesztése</string>
    <string name="settings_myposts">Saját posztok</string>
    <string name="settings_logout">Kijelentkezés</string>
    <string name="menu_back">Vissza</string>
    <string name="menu_delete">Törlés</string>
    <string name="saved_contacts">Mentett névjegyek</string>
    <string name="no_connection">Nincs internetkapcsolat. Ellenőrizd a hálózatot majd indítsd újra az alkalmazást!</string>
    <string name="contact_saved">Mentve az offline névjegyek közé</string>
    <string name="delete_post_title">Poszt törlése</string>
    <string name="delete_post_msg">Biztosan törlöd a posztot?</string>
    <string name="yes">Igen</string>
    <string name="no">Nem</string>
    <string name="post_created">Poszt létrehozva</string>
    <string name="btn_applied_success">A poszt szerzője értesítést fog kapni</string>
    <string name="btn_apply_own">Saját poszt</string>
    <string name="reset_applied">Visszaállítás</string>
    <string name="reset_applied_msg">Biztosan törlöd a posztra jelentkező felhasználót?</string>
    <string name="notification_channel_id">1</string>
    <string name="reset_applied_success">Jelentkező törölve. Visszaállítottad a posztod.</string>
    <string name="notify_lost_title">Megtalálták egy tárgyadat!</string>
    <string name="notify_lost_text">Valaki megtalálta a "%1$s" című posztod tárgyát! A részletekért kattints ide!</string>
    <string name="notify_found_title">Jelentkeztek egy tárgyadra!</string>
    <string name="notify_found_text">Valaki jelentkezett a "%1$s" című posztod tárgyáért! A részletekért kattints ide!</string>
    <string name="delete_contact_title">Névjegy törlése</string>
    <string name="delete_contact_msg">Biztosan törlöd ezt a névjegyet a mentett névjegyek közül?</string>
    <string name="no_saved_contacts">Nincsenek mentett névjegyek</string>
    <string name="no_own_post">Nincs saját posztod</string>
    <string name="btn_apply_youlostit">Jelentkeztél érte</string>
    <string name="btn_apply_youfoundit">Megtaláltad</string>
</resources>