<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/primaryLightColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_lost_items" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress"
                android:text=""/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintPassword"
                android:inputType="textPassword"
                android:text=""/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:padding="12dp"
            android:text="@string/btnTextLogin"
            style="?attr/materialButtonOutlinedStyle"
            app:rippleColor="@color/white"
            android:textColor="@color/secondaryColor"
            app:strokeColor="@color/secondaryColor"
            app:strokeWidth="2dp"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/btnTextRegister"
            android:textColor="@color/primaryDarkColor"
            android:backgroundTint="@color/secondaryColor"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContacts"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:padding="12dp"
            android:layout_gravity="center"
            android:text="@string/saved_contacts"
            app:icon="@drawable/ic_round_people_24"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/white"
            app:rippleColor="@color/white"
            android:textColor="@color/white"
            app:strokeColor="@color/secondaryColor"
            app:strokeWidth="2dp"/>

    </LinearLayout>

</ScrollView>