<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_write_post"
    android:background="@color/primaryLightColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:theme="@style/Theme.BMELostAndFound.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:background="@color/primaryDarkColor"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/Theme.BMELostAndFound.AppBarOverlay">

            <TextView
                android:id="@+id/tvCreateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/primaryDarkColor"
                android:minHeight="?actionBarSize"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                tools:text="Lost or Found" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="12dp"
        app:contentPadding="4dp"
        app:contentPaddingBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayoutDetail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_create_title"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="@+id/etBody"
                app:layout_constraintStart_toStartOf="@+id/etBody"
                app:layout_constraintTop_toBottomOf="@+id/btnAttach" />

            <EditText
                android:id="@+id/etBody"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_body"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:scrollHorizontally="false"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etTitle"
                app:layout_constraintVertical_bias="0.491" />

            <ImageView
                android:id="@+id/imgAttach"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_add_image" />

            <Button
                android:id="@+id/btnAttach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Attach image"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgAttach" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/button_send"
                android:backgroundTint="@color/secondaryDarkColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinnerBuildings"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/etBody"
                app:layout_constraintTop_toBottomOf="@+id/etBody" />

            <TextView
                android:id="@+id/tvBuilding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_building"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/spinnerBuildings"
                app:layout_constraintStart_toStartOf="@+id/etBody"
                app:layout_constraintTop_toTopOf="@+id/spinnerBuildings" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.8" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>